--- a/calculadora.html
+++ b/calculadora.html
@@ -35,6 +35,9 @@
     <input type="number" id="num1" placeholder="Digite o primeiro número">
     <input type="number" id="num2" placeholder="Digite o segundo número">
     <input type="button" value="Somar" onclick="soma()">
+    <input type="button" value="Subtrair" onclick="subtracao()">
+    <input type="button" value="Multiplicar" onclick="multiplicacao()">
+    <input type="button" value="Dividir" onclick="divisao()">
     <input type="text" id="resultado" placeholder="Resultado" readonly>
 </div>
 
@@ -45,8 +48,32 @@
         var resultado = num1 + num2;
         document.getElementById('resultado').value = resultado;
     }
+
+    function subtracao() {
+        var num1 = parseFloat(document.getElementById('num1').value);
+        var num2 = parseFloat(document.getElementById('num2').value);
+        var resultado = num1 - num2;
+        document.getElementById('resultado').value = resultado;
+    }
+
+    function multiplicacao() {
+        var num1 = parseFloat(document.getElementById('num1').value);
+        var num2 = parseFloat(document.getElementById('num2').value);
+        var resultado = num1 * num2;
+        document.getElementById('resultado').value = resultado;
+    }
+
+    function divisao() {
+        var num1 = parseFloat(document.getElementById('num1').value);
+        var num2 = parseFloat(document.getElementById('num2').value);
+        if (num2 === 0) {
+            alert("Não é possível dividir por zero!");
+        } else {
+            var resultado = num1 / num2;
+            document.getElementById('resultado').value = resultado;
+        }
+    }
 </script>
 
 </body>
 </html>
-
